HV-1628 Remove deprecated call to Class#newInstance()